--- a/index.html
+++ b/index.html
@@ -31,7 +31,21 @@
 <!-- Confimed orders -->
 	 <section class ="confirmed orders" id="confirmed-orders">
 	 <h2 class="home box title" id="home-box-title"> confirmed orders</h2>
-	 <!--Insert a picture to fill in the space ->
+	
+	<div class="view confirmed orders" id="text-orders">
+	<p>Date 
+time
+order#:16156541361354
+name of repcient: Chris P. Bacton</p>
+<p>Date 
+time
+order#:16156541361354
+name of repcient: Chris P. Bacton</p><p>Date 
+time
+order#:16156541361354
+name of repcient: Chris P. Bacton</p>
+</div>
+
 	 </section>
 	 
 	 <!-- Calendar -->
