--- a/contact_us.html
+++ b/contact_us.html
@@ -28,5 +28,17 @@
 		
      </div>
 	 
+	 <section class =" contact us">
+	 <h2> Contact us</h2>
+	 
+        <ul>	 
+	        <li> Email: MealZoomassist@gmail.com </li>
+			<li> customer service Number:(555) 123-7890</li>
+			<li> 27 Larkspur Avenue Kensington, Cape Town 8001 South Africa</li>
+			<li> (fax)+1-555-482-9374 </li>
+		<ul>
+	 
+	 </section>
+	
 	</body>
   </html>
