--- a/about_us.html
+++ b/about_us.html
@@ -28,5 +28,18 @@
 		
      </div>
 	 
+	 	 <!--insert an about us section-->
+	 <section class= "about">
+	 <h2> About us</h2>
+	 <p>Back in the day when this first start we had no food waiting for us when we got off work some of
+	 us worked out and which those same people didn’t have enouch time to cook because they had to work
+	 and they wanted to kepp their hobbie </p>
+	 <!--insert picutre here realting to food-->
+	 <img src= "Media/Tutoring1.jpg" alt="Tutoring in progress" class="tutoring">
+	 <p>Here is how we first started</p>
+	 <img src= "Media/subjects1.jpg" alt ="Diff subjects" class=" subjects">
+	 <img src= "Media/subjects2.jpg" alt = "Diff college subjects" class ="college subjects">
+	 </section>
+	 
 	</body>
   </html>
