--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <li class="menu item"><a href="checkout.html" class="menu-link">Payment menu</a></li>
 		  <li class="menu item"><a href="gallery.html" class="menu-link">Payment menu</a></li>
         </ul>
-		
+			<img src = "media/PF-pic.jpg" alt="profile icon" class= "profile">
      </div>
 	 
 <!-- Confimed orders -->
