--- a/about_us.html
+++ b/about_us.html
@@ -37,8 +37,8 @@
 	 <!--insert picutre here realting to food-->
 	 <img src= "Media/Tutoring1.jpg" alt="Tutoring in progress" class="tutoring">
 	 <p>Here is how we first started</p>
-	 <img src= "Media/subjects1.jpg" alt ="Diff subjects" class=" subjects">
-	 <img src= "Media/subjects2.jpg" alt = "Diff college subjects" class ="college subjects">
+	 <!-- insert a picture on like a warehouse-->
+
 	 </section>
 	 
 	</body>
