--- a/index.html
+++ b/index.html
@@ -1,136 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Final Project</title>
-	
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/rest.css">
-	
-	<script src="js/script.js" defer></script>
-  </head>
-  
-  
-  <body>
-  <!-- Header / Navagation-->
-       <div class="menu" id="navigation-menu">
-        <h1 class="menu-title"> MealZoom </h1>
-        <ul class="menu-list">
-          <li class="menu item"><a href="index.html" class="menu-link">Home</a></li>
-          <li class="menu item"><a href="products.html" class="menu-link">Products</a></li>
-          <li class="menu item"><a href="faq.html" class="menu-link">FAQ</a></li>
-		  <li class="menu item"><a href="about_us.html" class="menu-link">About Us</a></li>
-          <li class="menu item"><a href="contact_us.html" class="menu-link">Tutoring info</a></li>
-          <li class="menu item"><a href="checkout.html" class="menu-link">Payment menu</a></li>
-		  <li class="menu item"><a href="gallery.html" class="menu-link">Payment menu</a></li>
-        </ul>
-			<img src = "media/PF-pic.jpg" alt="profile icon" class= "profile">
-     </div>
-	 
-<!-- Confimed orders -->
-	 <section class ="confirmed orders" id="confirmed-orders">
-	 <h2 class="home box title" id="home-box-title"> confirmed orders</h2>
-	
-	<div class="view confirmed orders" id="text-orders">
-	<p>Date 
-time
-order#:16156541361354
-name of repcient: Chris P. Bacton</p>
-<p>Date 
-time
-order#:16156541361354
-name of repcient: Chris P. Bacton</p><p>Date 
-time
-order#:16156541361354
-name of repcient: Chris P. Bacton</p>
-</div>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>MealZoom | Home</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/meyersreset-and-normalize-form.css">
+  <script src="js/script.js" defer></script>
+</head>
+<body>
 
-	 </section>
-	 
-	 <!-- Calendar -->
-	 <section class="calendar">
-    <h2 class= calendar id="calendar">Calendar</h2>
-	
-	<div class="calendar-weekdays">
-  <div>Mon</div>
-  <div>Tue</div>
-  <div>Wed</div>
-  <div>Thu</div>
-  <div>Fri</div>
-  <div>Sat</div>
-  <div>Sun</div>
-</div>
+  <!-- Header / Navigation -->
+  <header class="menu" id="navigation-menu">
+    <h1 class="menu-title">MealZoom</h1>
+    
+    <!-- Desktop Navigation -->
+    <ul class="menu-list">
+      <li><a href="index.html" class="menu-link">Home</a></li>
+      <li><a href="products.html" class="menu-link">Products</a></li>
+      <li><a href="faq.html" class="menu-link">FAQ</a></li>
+      <li><a href="about_us.html" class="menu-link">About Us</a></li>
+      <li><a href="contact_us.html" class="menu-link">Contact Us</a></li>
+      <li><a href="checkout.html" class="menu-link">Checkout</a></li>
+      <li><a href="gallery.html" class="menu-link">Gallery</a></li>
+    </ul>
 
-    <div class="calendar-grid" id="calendar-box">
-      <div>Monday</div>
-      <div>Tuesday</div>
-      <div>Wednesday</div>
-      <div>Thursday</div>
-      <div>Friday</div>
-      <div>Saturday</div>
-      <div>Sunday</div>
+    <!-- Profile Icon -->
+    <img src="media/PF-pic.jpg" alt="profile icon" class="profile">
+
+    <!-- Hamburger Menu -->
+    <div class="ham-menu" aria-expanded="false" aria-controls="offScreenMenu">
+      <span></span>
+      <span></span>
+      <span></span>
     </div>
-	
-	<div class= "calendar dates" id="calendar-dates">
-  <!-- Week 1 -->
-  <div>1</div><div>2</div><div>3</div><div>4</div><div>5</div><div>6</div><div>7</div>
-  <!-- Week 2 -->
-  <div>8</div><div>9</div><div>10</div><div>11</div><div>12</div><div>13</div><div>14</div>
-  <!-- Week 3 -->
-  <div>15</div><div>16</div><div>17</div><div>18</div><div>19</div><div>20</div><div>21</div>
-  <!-- Week 4 -->
-  <div>22</div><div>23</div><div>24</div><div>25</div><div>26</div><div>27</div><div>28</div>
-  <!-- Week 5 -->
-  <div>29</div><div>30</div><div>31</div><div></div><div></div><div></div><div></div>
-  </div>
+
+    <!-- Off-Screen Menu -->
+    <div class="off-screen-menu" id="offScreenMenu">
+      <ul>
+        <li><a href="index.html" class="menu-link">Home</a></li>
+        <li><a href="products.html" class="menu-link">Products</a></li>
+        <li><a href="faq.html" class="menu-link">FAQ</a></li>
+        <li><a href="about_us.html" class="menu-link">About Us</a></li>
+        <li><a href="contact_us.html" class="menu-link">Contact Us</a></li>
+        <li><a href="checkout.html" class="menu-link">Checkout</a></li>
+        <li><a href="gallery.html" class="menu-link">Gallery</a></li>
+      </ul>
+    </div>
+  </header>
+
+  <!-- Confirmed Orders -->
+  <section class="confirmed-orders" id="confirmed-orders">
+    <h2 id="home-box-title">Confirmed Orders</h2>
+    <div class="view-confirmed-orders" id="text-orders">
+      <p>Date | Time | Order#: 16156541361354 | Recipient: Chris P. Bacton</p>
+      <p>Date | Time | Order#: 16156541361355 | Recipient: Alex J. Smith</p>
+      <p>Date | Time | Order#: 16156541361356 | Recipient: Jamie L. Doe</p>
+    </div>
   </section>
 
-	 
-	 
-	 
-	 
-	 
-	 <!--insert an about us section-->
-	 <section class= "about">
-	 <h2> About us</h2>
-	 <p>Back in the day when this first start we had no food waiting for us when we got off work some of
-	 us worked out and which those same people didn’t have enouch time to cook because they had to work
-	 and they wanted to kepp their hobbie </p>
-	 <!--insert picutre here realting to food-->
-	 <img src= "Media/Tutoring1.jpg" alt="Tutoring in progress" class="tutoring">
-	 <p>Here is how we first started</p>
-	 <img src= "Media/subjects1.jpg" alt ="Diff subjects" class=" subjects">
-	 <img src= "Media/subjects2.jpg" alt = "Diff college subjects" class ="college subjects">
-	 </section>
-	 
-	 
-	 <section class =" contact us">
-	 <h2> Contact us</h2>
-	 
-        <ul>	 
-	        <li> Email: MealZoomassist@gmail.com </li>
-			<li> customer service Number:(555) 123-7890</li>
-			<li> 27 Larkspur Avenue Kensington, Cape Town 8001 South Africa</li>
-			<li> (fax)+1-555-482-9374 </li>
-		<ul>
-	 
-	 </section>
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	</body>
-  </html>
+  <!-- Calendar with Images on Left and Right -->
+  <section class="calendar-layout">
+    
+    <!-- Left Image -->
+    <div class="calendar-side">
+      <img src="media/workingOut.jpg" alt="guy working out" class="working-out">
+    </div>
+
+    <!-- Calendar in the Middle -->
+    <div class="calendar">
+      <h2>Calendar</h2>
+      <div class="calendar-weekdays">
+        <div>Mon</div><div>Tue</div><div>Wed</div><div>Thu</div><div>Fri</div><div>Sat</div><div>Sun</div>
+      </div>
+      <div class="calendar-dates" id="calendar-dates">
+        <div class="calendar-week"><div>1</div><div>2</div><div>3</div><div>4</div><div>5</div><div>6</div><div>7</div></div>
+        <div class="calendar-week"><div>8</div><div>9</div><div>10</div><div>11</div><div>12</div><div>13</div><div>14</div></div>
+        <div class="calendar-week"><div>15</div><div>16</div><div>17</div><div>18</div><div>19</div><div>20</div><div>21</div></div>
+        <div class="calendar-week"><div>22</div><div>23</div><div>24</div><div>25</div><div>26</div><div>27</div><div>28</div></div>
+        <div class="calendar-week"><div>29</div><div>30</div><div>31</div><div></div><div></div><div></div><div></div></div>
+      </div>
+    </div>
+
+    <!-- Right Image -->
+    <div class="calendar-side">
+      <img src="media/saucyChicken.jpg" alt="plate of chicken" class="saucy-chicken">
+    </div>
+
+  </section>
+
+  <!-- Contact Us -->
+  <section class="contact-us">
+    <h2>Contact Us</h2>
+    <ul>
+      <li>Email: MealZoomassist@gmail.com</li>
+      <li>Customer Service Number: (555) 123-7890</li>
+      <li>27 Larkspur Avenue, Kensington, Cape Town 8001, South Africa</li>
+      <li>Fax: +1-555-482-9374</li>
+    </ul>
+  </section>
+
+  <!-- Footer Navigation -->
+  <footer>
+    <p>&copy; 2025 MealZoom</p>
+    <ul class="footer-nav">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="products.html">Products</a></li>
+      <li><a href="faq.html">FAQ</a></li>
+      <li><a href="about_us.html">About Us</a></li>
+      <li><a href="contact_us.html">Contact Us</a></li>
+      <li><a href="checkout.html">Checkout</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
+    </ul>
+  </footer>
+
+</body>
+</html>
