--- a/products.html
+++ b/products.html
@@ -55,6 +55,7 @@
         <img src="media/whiteChicken.jpg" alt="Creamy Chicken Alfredo" class="product-img">
         <h3>Chicken Alfredo</h3>
         <p>Better than restaurants — creamy Alfredo with grilled chicken, topped with prosciutto.</p>
+        <a href="checkout.html" class="buy-btn">Buy Now</a>
       </div>
 
       <!-- Product Card -->
@@ -62,6 +63,7 @@
         <img src="media/saucyChicken.jpg" alt="Roasted Chicken with sides" class="product-img">
         <h3>Roasted Chicken Plate</h3>
         <p>Served with asparagus, mashed potatoes, and avocado — a balanced meal of protein and carbs.</p>
+        <a href="checkout.html" class="buy-btn">Buy Now</a>
       </div>
 
       <!-- Product Card -->
@@ -69,6 +71,7 @@
         <img src="media/beefBowl.jpg" alt="Beef bowl with rice" class="product-img">
         <h3>Beef Rice Bowl</h3>
         <p>Tender beef tossed in soy sauce and sesame, served over fluffy white rice.</p>
+        <a href="checkout.html" class="buy-btn">Buy Now</a>
       </div>
 
     </div>
