--- a/faq.html
+++ b/faq.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MealZoom | Products</title>
+  <title>MealZoom | FAQ</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/meyersreset-and-normalize-form.css">
   <script src="js/script.js" defer></script>
@@ -15,23 +15,17 @@
     <h1 class="menu-title">MealZoom</h1>
     <ul class="menu-list">
       <li><a href="index.html" class="menu-link">Home</a></li>
-      <li><a href="products.html" class="menu-link active">Products</a></li>
-      <li><a href="faq.html" class="menu-link">FAQ</a></li>
+      <li><a href="products.html" class="menu-link">Products</a></li>
+      <li><a href="faq.html" class="menu-link active">FAQ</a></li>
       <li><a href="about_us.html" class="menu-link">About Us</a></li>
       <li><a href="contact_us.html" class="menu-link">Contact Us</a></li>
       <li><a href="checkout.html" class="menu-link">Checkout</a></li>
       <li><a href="gallery.html" class="menu-link">Gallery</a></li>
     </ul>
-
-    <!-- Profile Icon -->
     <img src="media/PF-pic.jpg" alt="profile icon" class="profile">
-
-    <!-- Hamburger Menu -->
     <div class="ham-menu" aria-expanded="false" aria-controls="offScreenMenu">
       <span></span><span></span><span></span>
     </div>
-
-    <!-- Off-Screen Menu -->
     <div class="off-screen-menu" id="offScreenMenu">
       <ul>
         <li><a href="index.html" class="menu-link">Home</a></li>
@@ -44,14 +38,38 @@
       </ul>
     </div>
   </header>
-  
-  
-  
-  
-  
-  
-  
-   <!-- Contact Us -->
+
+  <!-- FAQ Section -->
+  <section class="faq">
+    <h2>Frequently Asked Questions</h2>
+
+    <div class="faq-item">
+      <h3>How do I place an order?</h3>
+      <p>Browse our Products page, add meals to your cart, and complete checkout online.</p>
+    </div>
+
+    <div class="faq-item">
+      <h3>Do you deliver?</h3>
+      <p>Yes! We deliver to most areas in Cape Town and are expanding to new regions soon.</p>
+    </div>
+
+    <div class="faq-item">
+      <h3>Can I customize my meals?</h3>
+      <p>Absolutely. You can request substitutions or add-ons when placing your order.</p>
+    </div>
+
+    <div class="faq-item">
+      <h3>What payment methods do you accept?</h3>
+      <p>We accept credit cards, debit cards, and secure online payment options.</p>
+    </div>
+
+    <div class="faq-item">
+      <h3>Is MealZoom healthy?</h3>
+      <p>Our meals are designed to balance nutrition and taste, with options for fitness and wellness goals.</p>
+    </div>
+  </section>
+
+  <!-- Contact Us -->
   <section class="contact-us">
     <h2>Contact Us</h2>
     <ul>
@@ -61,7 +79,7 @@
       <li>Fax: +1-555-482-9374</li>
     </ul>
   </section>
-	 
+
   <!-- Footer Navigation -->
   <footer>
     <p>&copy; 2025 MealZoom</p>
@@ -75,6 +93,6 @@
       <li><a href="gallery.html">Gallery</a></li>
     </ul>
   </footer>
-	 
-	</body>
-  </html>
+
+</body>
+</html>
